--- a/pre release/2018pre.md
+++ b/pre release/2018pre.md
@@ -101,4 +101,137 @@ In the last example, computergame and vehicle are the subclasses of toy.
 
 Task 2.3
 
+```python
+class Toy:
+    def __init__(self, N, ID, P, M):
+        self.__Name= N;
+        self.__ID= ID;
+        self.__Price= P;
+        self.__Minimumage= M;
+    def SetName(self,N):
+        self.__Name=N;
+    def SetID(self,N):
+        self.__ID=N;
+    def SetPrice(self,P):
+        self.__Price=P;
+    def SetMinimumage(self,M):
+        self.__Minimumage = M;
+    def GetName(self):
+        return(self.__Name)
+    def GetID(self):
+        return(self.__ID)
+    def GetPrice(self):
+        return(self.__Price)
+    def GetMinimumage(self):
+        return(self.__Minimumage);
 
+    def Output(self):
+        print(self.__Name, self.__ID, self.__Price, self.__Minumage);
+```
+
+Task 2.4
+
+```python
+class ComputerGame(Toy):
+    def __init__(self, N, I, P, M, C, Co):
+        Toy.__init__(self,N, I, P, M)
+        self.__Category = C
+        self.__Console = Co
+
+    def SetCategory(self, C):
+        self.__Category = C
+
+    def SetConsole(self, Co):
+        self.__Console= Co
+
+    def GetCategory(self):
+        return(self.__Category)
+
+    def GetConsole(self):
+        return(self.__Console)
+
+    def Output(self):
+        Toy.Output();
+        print(self.__Category, self.__Console)       
+
+class Vehicle(Toy):
+    def __init__(self, N, I, P ,M ,T, H, L, W):
+        Toy.__init__(self,N, I, P, M)
+        self.__Type=T
+        self.__Height=H
+        self.__Length=L
+        self.__Weight= W
+
+    def SetType(self,T):
+        self.__Type = T;
+
+    def SetHeight(self,H):
+        self.__Height = H;
+
+    def SetLength(self,L):
+        self.__Length = L;
+
+    def SetWeight(self,W):
+        self.__Weight = W;
+
+    def GetHeight(self):
+        return(self.__Height)
+
+    def GetLength(self):
+        return(self.__Length)
+
+    def GetWeight(self):
+        return(self.__Weight)
+
+    def GetType(self):
+	return(self.__Type)
+
+    def Output(self):
+        Toy.Output()
+        print(self.__Type, self.__Weight, self.__Height, self.__Length);
+```
+
+2.5
+
+try:
+    if age>0 and age<=18:
+        self.age = age;
+    else:
+        age=input('please input again');
+2.6
+
+vehicle=[ ];
+computergame=[ ];
+vehicle.append(Vehicle('red sports car','RSC13',15.00,6,'car',3.3,12.1,0.08);
+
+2.7
+
+def printdetails(id):
+   i=0;
+   while toy[i].GetID() != id:
+       i += 1;
+   toy[i].Output();
+2.8
+
+def discount(n):
+    n=n/100;
+    for i in range(len(toy)):
+        toy[i].SetPrice(toy[i].GetPrice()*n);
+
+2.9
+
+a bubble sort changes the order of the list one item and another by comparing the two near once at a time. 
+a insertion sort does it by finding the approperiate position to insert the item
+
+2.10
+
+```python
+def sort():
+    for i in range(1,len(toys)):
+        item=toy[i]
+        c = i-1; 
+        while item.GetPrice < toy[c].GetPrice and c > 0:
+            toy[c+1]=toy[c];
+            c -= 1;
+        toy[c+1]=item;
+```
