--- a/pre release/2018pre.md
+++ b/pre release/2018pre.md
@@ -99,6 +99,11 @@ inheritence means that one class's parameters is directly passed down to its
 subclasses.
 In the last example, computergame and vehicle are the subclasses of toy.
 
+				Toy
+				  ¡ü
+   	  |		   		       |
+ComputerGame			Vehicle
+
 Task 2.3
 
 ```python
@@ -193,30 +198,72 @@ class Vehicle(Toy):
 
 2.5
 
-try:
-    if age>0 and age<=18:
-        self.age = age;
-    else:
-        age=input('please input again');
+```python
+class Toy:
+    def SetMinimumAge(self, a):
+    	if a>18 or a<0:
+        	print('not valid')
+		else:
+			self.__MinimumAge=a
+```
+
 2.6
 
 vehicle=[ ];
 computergame=[ ];
 vehicle.append(Vehicle('red sports car','RSC13',15.00,6,'car',3.3,12.1,0.08);
+computergame.append(ComputerGame('COD8','RSC14',100,17,'FPS','PC'));
+
 
 2.7
 
-def printdetails(id):
-   i=0;
-   while toy[i].GetID() != id:
-       i += 1;
-   toy[i].Output();
+```python
+class Toy:
+	def PrintDetails(self):
+		print(" Name:",self.__name)
+		print(" ID:",self.__ID)
+		print(" Price:",self.__Price)
+		print(" Minimum age:",self.__MinimumAge)
+
+class ComputerGame(self):
+	def PrintDetails(self):
+		print(" Name:",self.__name)
+		print(" ID:",self.__ID)
+		print(" Price:",self.__Price)
+		print(" Minimum age:",self.__MinimumAge)
+		print(" Category:",self.__Category)
+		print(" Console:",self.__Console)
+
+class Vehicle(self):
+	def PrintDetails(self):
+		print(" Name:",self.__name)
+		print(" ID:",self.__ID)
+		print(" Price:",self.__Price)
+		print(" Minimum age:",self.__MinimumAge)
+		print(" Type:",self.__Type)
+		print(" Height:",self.__Height)
+		print(" Length:",self.__Length)
+		print(" Weight:",self.__Weight)
+def FindToy(ID):
+    Found = False;
+	for i in toys:
+		if i.GetID() == ID:
+			i.PrintDetails();
+			Found = True;
+			break
+	if Found == False:
+		print('ID not found');
+
+```
+
 2.8
 
+```python
 def discount(n):
     n=n/100;
     for i in range(len(toy)):
-        toy[i].SetPrice(toy[i].GetPrice()*n);
+        toy[i].SetPrice(toy[i].GetPrice()*(1-n));
+```
 
 2.9
 
@@ -235,3 +282,5 @@ def sort():
             c -= 1;
         toy[c+1]=item;
 ```
+
+
